--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -5,11 +5,16 @@ jobs:
     name: Test with integration
     runs-on: ubuntu-latest
     timeout-minutes: 20
+    defaults:
+      run:
+        working-directory: ./go/src/github.com/${{ github.repository }}
     env:
       HELM_VERSION: v2.14.3
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          path: ./go/src/github.com/${{ github.repository }}
       - uses: azure/setup-helm@v1
         with:
           version: ${{ env.HELM_VERSION }}
@@ -19,7 +24,9 @@ jobs:
       - run: go version
       - uses: actions/cache@v2
         with:
-          path: ~/go/pkg/mod
+          path: |
+            ~/go/pkg/mod
+            ${{ github.workspace }}/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
