--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -7,14 +7,14 @@ jobs:
     timeout-minutes: 20
     defaults:
       run:
-        working-directory: ./go/src/github.com/${{ github.repository }}
+        working-directory: ${{ env.HOME }}/go/src/github.com/${{ github.repository }}
     env:
       HELM_VERSION: v2.14.3
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          path: ./go/src/github.com/${{ github.repository }}
+          path: ${{ env.HOME }}/go/src/github.com/${{ github.repository }}
       - uses: azure/setup-helm@v1
         with:
           version: ${{ env.HELM_VERSION }}
